# -C

./: icesm.py
build-mainconsole-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-mainconsole-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-7f8ddec5310490751aee.json  cmakeFiles-v1-0da45e05e232a2514978.json  codemodel-v2-5dd9df64dbce2362c15c.json  directory-.-Debug-e351c543b7ef6381ddc1.json  index-2023-03-10T09-07-19-0705.json  target-mainconsole-Debug-e2c18296155dd93ee773.json  target-mainconsole_autogen-Debug-994ad373f85ce95b0dc8.json  target-mainconsole_autogen_timestamp_deps-Debug-7614bf2051c4279e0f0b.json
build-mainconsole-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
mainconsole/: CMakeLists.txt  main.cpp
qtconsoleapp/build-consoleapp-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
qtconsoleapp/build-consoleapp-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-de81c91cbfa308648682.json  cmakeFiles-v1-ef6d801e2a3ffa395a14.json  codemodel-v2-b922d84c23fdd1bdc4f6.json  directory-.-Debug-70e0976213e0ae8305ed.json  index-2024-10-29T20-27-10-0190.json  target-consoleapp-Debug-b59a5bd7234b05616ecf.json  (+2 more)
qtconsoleapp/build-consoleapp-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
qtconsoleapp/build-consoleapp-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/consoleapp_autogen/: deps
qtconsoleapp/consoleapp/: CMakeLists.txt  main.cpp
